Arreglando el jwt y autenticacion, terminando los endpoints de Cargo, Dependencia y Solicitud.